2000-11-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.11.tar.gz: released version 0.2.11.

	* tools/dump-*.c: Now all smidump driver modules register their
	format drivers with smidump with an init_<format>() function.
	Additionally, we allow a driver to register format specific
	options. See dump-identifiers.c for a first small example.

	* tools/shhopt.[ch]: Added support for long options. Thanks
	to Sverre H. Huseby for his small and beatiful shhopt library.
	See http://shh.thathost.com/pub-unix/.
	
	* tools/dump-*.c: Fixed some minor compiler warnings.

	* ltconfig: Updated to libtool 1.3.5.

	* win/GNUmakefile: Added this GNU makefile using the MSVC compiler
	contributed by Yigal Hochberg.

	* lib/check.c: Bill Fenner fixed wrong line numbers reported
	on TCs.

2000-11-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.10.tar.gz: released version 0.2.10.

	* configure.in: Fixed broken 64 bit type configuration.

2000-11-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* changed filenames of file created by the corba and netsnmp
	dump drivers. Adapted test suite.

	* libsmi-0.2.9.tar.gz: released version 0.2.9.

2000-11-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* smi.conf-example: Added a configuration file example.

	* configure.in: Dir separator is now configurable and distinguished
	in util/smiIsPath().

	* win/*: Some changes for clean MSVC compilation. Yigal.

2000-11-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/config.h: Added macros for 64 bit types on MSVC systems.
	Added a necessary compiler flag to compile scanner-*.c on MSVC.
	Thanks to Yigal.

	* configure.in: Fixed: completely broken AC_TRY_RUN check for
	64 bit types. Somehow, I did it in a way that was syntactically
	correct. ;-)

	* acconfig.h: renamed MIN/MAX macros to suppress redefinitions
	on Solaris 2.6+.

2000-11-13  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.8.tar.gz: released version 0.2.8.
